<resources>
    <string name="app_name">Bop-It</string>
    <string name="inGameCountDownTimer">00:00</string>
    <string name="retour_au_menu">Retour au menu</string>
    <string name="felicitation_ton_score_est_de">Felicitation ton score est de :</string>
    <string name="voici_ta_place_dans_le_classement">Voici ta place dans le classement :</string>
    <string name="slideup">Slide up!</string>
    <string name="slidedown">Slide down!</string>
    <string name="slideleft">Slide left!</string>
    <string name="slideright">Slide right!</string>
    <string name="bopt">Bop-IT!</string>
    <string name="bop_it">Bop-it</string>
    <string name="welcome_to_bop_it">Welcome to bop it</string>
    <string name="pseudo">Pseudo</string>
    <string name="nb_defi">nb Defi</string>
    <string name="dev">Dev</string>
    <string name="_29430">29430</string>
</resources>